--- a/panel.html
+++ b/panel.html
@@ -232,7 +232,7 @@ function initGoGame() {
     const LEARNING_ENDPOINT = 'https://d2d35ee85ddd.ngrok-free.app/log_go_game';
 
     // --- Kurallar ve Öğrenme Parametreleri
-    const BOARD_SIZE = 19; // 19x19 (standart tahta)
+    const BOARD_SIZE = 9; // 9x9 (standart tahta 19)
     const GRID_UNITS = BOARD_SIZE - 1;
     const RULES = {
         scoring: (scoringSelect?.value || 'chinese'), // 'chinese' | 'japanese'
