--- a/panel.html
+++ b/panel.html
@@ -14,8 +14,7 @@
 <style>
     /* Oyun Alanı Stilleri */
     #go-game-container {
-        width: 100%;
-        max-width: 1400px; /* Oyun alanının maksimum genişliği */
+        width: min(96vmin, 1200px); /* Ekranın küçük kenarına göre ölçeklenir, 1200px'i aşmaz */
         margin: auto;
         font-family: 'Space Mono', monospace;
         display: flex;
@@ -24,6 +23,7 @@
     }
     #canvas-container {
         width: 100%;
+        max-height: 82vh; /* Yükseklik taşması olmasın */
         aspect-ratio: 1 / 1; /* Kare olmasını sağlar */
         cursor: pointer;
         border-radius: 12px;
@@ -110,7 +110,18 @@
     .text-slate-400 { color: #94a3b8; }
     .glow-text { text-shadow: 0 0 12px rgba(99,102,241,0.55); }
     .hidden { display: none; }
-    .ai-metrics { margin-top: .5rem; font-size: .9rem; color: #c7d2fe; opacity: .9; text-align: center; }
+</style>
+
+    /* Daha iyi buton yerleşimi ve sticky araç çubuğu */
+    #button-row .game-button { margin-top: 0.75rem; }
+    #qtools .game-button { margin-top: 0.25rem; }
+    #qtools.sticky-tools { position: sticky; bottom: 12px; z-index: 10; }
+    .mb-4 { margin-bottom: 1rem; }
+    @media (max-width: 768px) {
+        #go-game-container { width: min(98vmin, 100vw); }
+        #qtools.sticky-tools { bottom: 8px; }
+    }
+</style>
 </style>
 
 </head>
@@ -146,7 +157,7 @@
             </div>
             <div id="game-status">Oyun başlıyor...</div>
             <div id="ai-metrics" class="ai-metrics">ε: 0.20 • Q-durum sayısı: 0 • Skorlama: Çin • Komi: 7.5 • Tahta: 19x19</div>
-            <div class="text-center flex space-x-4 justify-center">
+            <div id="button-row" class="text-center flex space-x-4 justify-center">
                  <button id="pass-btn" class="game-button">Pas Geç</button>
                  <button id="restart-game-btn" class="game-button">Yeni Oyun</button>
                  <button id="music-toggle-btn" class="game-button">
@@ -154,7 +165,7 @@
                     <svg id="music-off-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 20 20"><path d="M11.928 4.072a.5.5 0 00-.578.018L8.99 6.5H7a1 1 0 00-1 1v4a1 1 0 001 1h1.99l2.36 2.41a.5.5 0 00.578.018.5.5 0 00.22-.418V4.5a.5.5 0 00-.22-.428zM14.25 7.05a.5.5 0 01.707 0L16.414 8.5l1.457-1.457a.5.5 0 01.707.707L17.121 9.207l1.457 1.457a.5.5 0 01-.707.707L16.414 9.914l-1.457 1.457a.5.5 0 01-.707-.707L15.707 9.207l-1.457-1.457a.5.5 0 010-.707zM7 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1z"/></svg>
                  </button>
             </div>
-            <div id="qtools" class="text-center flex space-x-4 justify-center" style="margin-top:0.75rem">
+            <div id="qtools" class="text-center flex space-x-4 justify-center sticky-tools" style="margin-top:0.25rem">
                  <button id="export-q-btn" class="game-button">Q-Tablosunu İndir</button>
                  <button id="import-q-btn" class="game-button">Q-Tablosu Yükle</button>
                  <button id="reset-q-btn" class="game-button" style="background-color:rgba(239,68,68,0.3);border-color:#ef4444">Hafızayı Sıfırla</button>
