--- a/index.html
+++ b/index.html
@@ -9,221 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0a0a0a;
-            color: #e2e8f0;
-            overflow-x: hidden;
-        }
-        #bg-canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-        .section {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 6rem 1.5rem;
-            position: relative;
-            z-index: 1;
-            opacity: 0;
-            transform: translateY(30px);
-            transition: opacity 1s ease-out, transform 1s ease-out;
-        }
-        .section.is-visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .glass-card {
-            background: rgba(17, 24, 39, 0.3);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 1rem;
-            padding: 2rem;
-        }
-        .glow-text {
-            text-shadow: 0 0 8px rgba(99, 102, 241, 0.5), 0 0 20px rgba(99, 102, 241, 0.3);
-        }
-        .font-mono {
-            font-family: 'Space Mono', monospace;
-        }
-        .nav-link.active {
-            color: #818cf8; /* indigo-400 */
-        }
-        .tab-button {
-            padding: 0.5rem 1rem;
-            border-radius: 9999px;
-            border: 1px solid transparent;
-            background-color: rgba(79, 70, 229, 0.2);
-            color: #c7d2fe;
-            transition: all 0.3s ease;
-            font-size: 0.875rem;
-        }
-        .tab-button:hover {
-             background-color: rgba(79, 70, 229, 0.4);
-        }
-        .tab-button.active {
-            background-color: #4f46e5; /* indigo-600 */
-            color: #e0e7ff; /* indigo-100 */
-            font-weight: 600;
-        }
-        .diary-content {
-             height: 400px;
-             overflow-y: auto;
-             scrollbar-width: thin;
-             scrollbar-color: #4f46e5 #1f2937;
-        }
-        .diary-content::-webkit-scrollbar {
-            width: 8px;
-        }
-        .diary-content::-webkit-scrollbar-track {
-            background: #1f2937;
-            border-radius: 10px;
-        }
-        .diary-content::-webkit-scrollbar-thumb {
-            background-color: #4f46e5;
-            border-radius: 10px;
-            border: 2px solid #1f2937;
-        }
-        #game-canvas {
-            cursor: pointer;
-            border-radius: 0.5rem;
-            }
-        /* ======================= GLITCH EFEKTİ KODLARI BAŞLANGIÇ ======================= */
-.glitch {
-  position: relative;
-  animation: glitch-animation 1s infinite;
-}
-
-.glitch::before,
-.glitch::after {
-  content: attr(data-text); /* Dinamik metin için */
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #0a0a0a; /* Arka plan renginle aynı olmalı */
-  overflow: hidden;
-}
-
-.glitch::before {
-  left: 2px;
-  text-shadow: -2px 0 #ff00c1; /* Fuchsia/Pembe gölge */
-  animation: glitch-anim-1 2s infinite linear alternate-reverse;
-}
-
-.glitch::after {
-  left: -2px;
-  text-shadow: -2px 0 #00fff9; /* Cyan/Turkuaz gölge */
-  animation: glitch-anim-2 2s infinite linear alternate-reverse;
-}
-
-@keyframes glitch-animation {
-  0% { transform: translate(0); }
-  20% { transform: translate(-3px, 3px); }
-  40% { transform: translate(-3px, -3px); }
-  60% { transform: translate(3px, 3px); }
-  80% { transform: translate(3px, -3px); }
-  100% { transform: translate(0); }
-}
-
-@keyframes glitch-anim-1 {
-  0% { clip-path: inset(40% 0 61% 0); }
-  20% { clip-path: inset(10% 0 86% 0); }
-  40% { clip-path: inset(93% 0 1% 0); }
-  60% { clip-path: inset(25% 0 75% 0); }
-  80% { clip-path: inset(50% 0 45% 0); }
-  100% { clip-path: inset(13% 0 85% 0); }
-}
-
-@keyframes glitch-anim-2 {
-  0% { clip-path: inset(72% 0 21% 0); }
-  20% { clip-path: inset(44% 0 53% 0); }
-  40% { clip-path: inset(86% 0 4% 0); }
-  60% { clip-path: inset(13% 0 85% 0); }
-  80% { clip-path: inset(83% 0 14% 0); }
-  100% { clip-path: inset(45% 0 53% 0); }
-}
-/* ======================== GLITCH EFEKTİ KODLARI BİTİŞ ======================== */
-
-        /* ======================= CHATBOT STİLLERİ BAŞLANGIÇ ======================= */
-#chatbot-container {
-    position: fixed;
-    bottom: 6.5rem; /* Butonun üstünde yer alması için ayarlandı */
-    right: 1.25rem;
-    width: 95%;
-    max-width: 650px;
-    height: 75vh;
-    max-height: 800px;
-    z-index: 100;
-    transform: translateY(20px) scale(0.95);
-    opacity: 0;
-    transition: all 0.3s ease-out;
-    pointer-events: none;
-    scroll-behavior: smooth;
-    touch-action: manipulation; /* mobilde daha akıcı etkileşim */
-    border-radius: 0.5rem;
-    background-color: rgba(17, 24, 39, 0.6); /* koyu arka plan */
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 2px solid #4f46e5; /* mor tonlarda görünür kenarlık */
-    border-radius: 12px;        /* yuvarlatılmış köşeler */
-    box-shadow: 0 8px 30px rgba(79, 70, 229, 0.2); /* yumuşak gölge */
-}
-#chatbot-container.open {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-    pointer-events: auto;
-}
-#chat-messages::-webkit-scrollbar {
-    width: 6px;
-}
-#chat-messages::-webkit-scrollbar-track {
-    background: #111827;
-}
-#chat-messages::-webkit-scrollbar-thumb {
-    background-color: #4f46e5;
-    border-radius: 10px;
-}
-.user-message {
-    align-self: flex-end;
-    background-color: #4f46e5;
-    color: white;
-}
-.bot-message {
-    align-self: flex-start;
-    background-color: #374151;
-    color: #e5e7eb;
-}
-/* ======================== CHATBOT STİLLERİ BİTİŞ ======================== */
-        /* Müzik kontrolü */
-        #music-control {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            position: fixed;
-            bottom: 6.5rem;
-            left: 0.0rem;
-        }
-        #mute-button {
-            background-image: url('https://cdn-icons-png.flaticon.com/512/1828/1828919.png');
-            background-size: cover;
-            background-position: center;
-        }
-        #mute-button.muted {
-            background-image: url('https://cdn-icons-png.flaticon.com/512/1828/1828920.png');
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body class="antialiased">
 
