--- a/index.html
+++ b/index.html
@@ -279,13 +279,6 @@
 // Bu blok, eski chatbot kodlarınızın yerine tamamen yapıştırılmalıdır.
 
 try {
-    // --- API ANAHTARLARI ---
-    const API_KEYS = {
-        google: 'AIzaSyDSAs1st3ZCsoxVgfISnLYQJX0uV_5Sgtk',
-        grok: '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',
-        kaira: 'UNUSED_API_KEY'
-    };
-    
     // --- AYARLAR ---
     const MEMORY_SIZE = 20;
     const LOGGING_ENDPOINT = 'https://0e197039b8a6.ngrok-free.app/log';
@@ -364,8 +357,6 @@ try {
         chatMessages.appendChild(botTypingDiv);
         chatMessages.scrollTop = chatMessages.scrollHeight;
 
-        const apiKey = API_KEYS[currentModel];
-
         try {
             // GLITCH EFEKTİ BAŞLAT
             chatbotContainer.classList.add('glitch');
@@ -376,10 +367,10 @@ try {
 
             switch (currentModel) {
                 case 'google':
-                    botMessage = await getGoogleGeminiResponse(apiKey, recentHistory);
+                    botMessage = await getGoogleGeminiResponse(recentHistory);
                     break;
                 case 'grok':
-                    botMessage = await getGroqResponse(apiKey, recentHistory);
+                    botMessage = await getGroqResponse(recentHistory);
                     break;
                 case 'kaira':
                     botMessage = await getKairaResponse(recentHistory);
@@ -404,23 +395,32 @@ try {
     };
 
     // --- API'YE ÖZEL FONKSİYONLAR ---
-    async function getGoogleGeminiResponse(apiKey, history) {
-        const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
-        const payload = { contents: history };
-        const response = await fetch(apiUrl, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(payload) });
-        if (!response.ok) { const errorData = await response.json(); throw new Error(`Google API Hatası: ${errorData.error.message}`); }
+    async function getGoogleGeminiResponse(history) {
+        const response = await fetch('/api/google', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ history })
+        });
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(`Google API Hatası: ${errorData.error}`);
+        }
         const result = await response.json();
-        return result.candidates[0].content.parts[0].text;
+        return result.text;
     }
 
-    async function getGroqResponse(apiKey, history) {
-        const apiUrl = 'https://api.groq.com/openai/v1/chat/completions';
-        const groqHistory = history.map(msg => ({ role: msg.role === 'model' ? 'assistant' : msg.role, content: msg.parts[0].text }));
-        const payload = { model: "llama3-70b-8192", messages: groqHistory };
-        const response = await fetch(apiUrl, { method: 'POST', headers: { 'Authorization': `Bearer ${apiKey}`, 'Content-Type': 'application/json' }, body: JSON.stringify(payload) });
-        if (!response.ok) { const errorData = await response.json(); throw new Error(`Groq API Hatası: ${errorData.error.message}`); }
+    async function getGroqResponse(history) {
+        const response = await fetch('/api/groq', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ history })
+        });
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(`Groq API Hatası: ${errorData.error}`);
+        }
         const result = await response.json();
-        return result.choices[0].message.content;
+        return result.text;
     }
 
     async function getKairaResponse(history) {
