--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
 // Bu blok, eski chatbot kodlarınızın yerine tamamen yapıştırılmalıdır.
 
 try {
+    // --- API ANAHTARLARI ---
     const API_KEYS = {
         google: 'AIzaSyDSAs1st3ZCsoxVgfISnLYQJX0uV_5Sgtk',
         grok: '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',
